<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="26dp"
        android:paddingHorizontal="24dp">

        <EditText
            android:id="@+id/etBookName"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/addBookNamePlaceholder"
            android:layout_marginVertical="12dp"/>

        <EditText
            android:id="@+id/etBookDescription"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/addBookDescriptionPlaceholder"
            android:layout_marginVertical="12dp"/>

        <EditText
            android:id="@+id/etBookLatitude"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/addBookLatPlaceholder"
            android:layout_marginVertical="12dp"/>

        <EditText
            android:id="@+id/etBookLogitude"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/addBookLongPlaceholder"
            android:layout_marginVertical="12dp"/>

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@color/colorIcons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/addBookButtonText"
            android:onClick="btnAddBookPressed"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>