<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="26dp"
        android:paddingHorizontal="24dp">

        <EditText
            android:id="@+id/etEmail"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/loginEmailPlaceholder"
            android:layout_marginVertical="12dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:textColorHint="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/loginPasswordPlaceholder"
            android:layout_marginVertical="12dp"/>

        <Button
            android:background="@color/colorPrimary"
            android:textColor="@color/colorIcons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButtonText"
            android:onClick="btnLoginPressed"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:onClick="btnSignUpPressed"
            android:text="@string/loginButtonSignUpText"/>

    </LinearLayout>

</ScrollView>